# Blackbone

./: .gitattributes  .gitignore  AppVeyor.yml  BlackBone.sln  LICENSE  README.md  README_MINGW_CLANG.md  appveyor.yml  appveyor_drv.yml
.github/workflows/: driver.yaml  lib.yaml  main.yaml
contrib/: VersionHelpers.h  corhdr.h  gchost.h  ivalidator.h  ivehandler.h  metahost.h
contrib/AsmJit/: ApiBegin.h  ApiEnd.h  AsmJit.h  AssemblerX86X64.cpp  Build.h  Config.h  CpuInfo.cpp  CpuInfo.h  Defs.h  DefsX86X64.cpp  DefsX86X64.h  LICENSE.md  MemoryManager.cpp  MemoryManager.h  MemoryMarker.cpp  Operand.h  OperandX86X64.cpp  OperandX86X64.h  Platform.cpp  README.md  Util.cpp  Util_p.h  base.h  contrib.h  host.h  x86.h
contrib/AsmJit/base/: assembler.cpp  assembler.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  constpool.cpp  constpool.h  containers.h  context.cpp  context_p.h  cpuinfo.cpp  cpuinfo.h  error.cpp  error.h  func.cpp  func.h  globals.cpp  globals.h  intutil.cpp  intutil.h  lock.h  logger.cpp  logger.h  operand.cpp  operand.h  podlist.h  podvector.cpp  podvector.h  runtime.cpp  runtime.h  string.cpp  string.h  vectypes.h  vmem.cpp  vmem.h  zone.cpp  zone.h
contrib/AsmJit/x86/: x86assembler.cpp  x86assembler.h  x86compiler.cpp  x86compiler.h  x86context.cpp  x86context_p.h  x86cpuinfo.cpp  x86cpuinfo.h  x86func.cpp  x86func.h  x86inst.cpp  x86inst.h  x86operand.cpp  x86operand.h  x86operand_regs.cpp  x86regs.cpp  x86regs.h  x86scheduler_p.h  x86util.cpp  x86util.h
contrib/BeaEngine/headers/: BeaEngine.h
contrib/Catch/: catch.hpp
contrib/rewolf-wow64ext/: .gitignore  README.md
contrib/rewolf-wow64ext/doc/: wow64ext.txt
src/: CMakeLists.txt  build.bat
src/BlackBone/: AsmHelper.h  AsmHelper32.cpp  AsmHelper32.h  AsmHelper64.cpp  AsmHelper64.h  AsmHelperBase.cpp  AsmHelperBase.h  AsmStack.hpp  AsmVariant.hpp  BlackBone.vcxproj  BlackBone.vcxproj.filters  CMakeLists.txt  Config.h  DllMain.cpp  DynImport.cpp  DynImport.h  Exports.def  FileProjection.cpp  FileProjection.h  FunctionTypes.h  HookHandlerCdecl.h  HookHandlerFastcall.h  HookHandlerStdcall.h  HookHandlerThiscall.h  HookHandlers.h  ImageNET.cpp  ImageNET.h  LDasm.c  LDasm.h  LocalHook.hpp  LocalHookBase.cpp  LocalHookBase.h  MExcept.cpp  MExcept.h  MMap.cpp  MMap.h  Macro.h  MemBlock.cpp  MemBlock.h  NameResolve.cpp  (+45 more)
src/BlackBone/Asm/: AsmFactory.h  AsmHelper.h  AsmHelper32.cpp  AsmHelper32.h  AsmHelper64.cpp  AsmHelper64.h  AsmHelperBase.h  AsmStack.hpp  AsmVariant.hpp  IAsmHelper.h  LDasm.c  LDasm.h
src/BlackBone/AsmJit/: ApiEnd.h  Assembler.h  AssemblerX86X64.h  Build.h  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  CompilerX86X64.cpp  CompilerX86X64.h  Config.h  Defs.cpp  Logger.cpp  Logger.h  MemoryMarker.h  Platform.h  Regenerate.py  Util.h
src/BlackBone/DriverControl/: DriverControl.cpp  DriverControl.h
src/BlackBone/Include/: ApiSet.h  CallResult.h  Exception.h  FunctionTypes.h  HandleGuard.h  Macro.h  NativeEnums.h  NativeStructures.h  ScopeExit.h  Types.h  Win7Specific.h  Win8Specific.h  WinXPSpecific.h  Winheaders.h
src/BlackBone/LocalHook/: HookHandlerCdecl.h  HookHandlerFastcall.h  HookHandlerStdcall.h  HookHandlerThiscall.h  HookHandlers.h  LocalHook.hpp  LocalHookBase.cpp  LocalHookBase.h  TraceHook.cpp  TraceHook.h  VTableHook.hpp
src/BlackBone/ManualMap/: MExcept.cpp  MExcept.h  MMap.cpp  MMap.h
src/BlackBone/ManualMap/Native/: NtLoader.cpp  NtLoader.h
src/BlackBone/Misc/: DynImport.cpp  DynImport.h  InitOnce.cpp  InitOnce.h  NameResolve.cpp  NameResolve.h  PatternLoader.cpp  PattrernLoader.cpp  PattrernLoader.h  StackTrace.h  Thunk.hpp  Trace.hpp  Utils.cpp  Utils.h
src/BlackBone/PE/: FileProjection.cpp  FileProjection.h  ImageNET.cpp  ImageNET.h  PEImage.cpp  PEImage.h  PEParser.cpp  PEParser.h
src/BlackBone/Patterns/: PatternSearch.cpp  PatternSearch.h
src/BlackBone/Process/: MemBlock.cpp  MemBlock.h  MultPtr.hpp  Process.cpp  Process.h  ProcessCore.cpp  ProcessCore.h  ProcessMemory.cpp  ProcessMemory.h  ProcessModules.cpp  ProcessModules.h
src/BlackBone/Process/RPC/: RemoteContext.hpp  RemoteExec.cpp  RemoteExec.h  RemoteFunction.hpp  RemoteHook.cpp  RemoteHook.h  RemoteLocalHook.cpp  RemoteLocalHook.h  RemoteMemory.cpp  RemoteMemory.h
src/BlackBone/Process/Threads/: Thread.cpp  Thread.h  Threads.cpp  Threads.h
src/BlackBone/Subsystem/: NativeSubsystem.cpp  NativeSubsystem.h  Wow64Local.cpp  Wow64Local.h  Wow64Subsystem.cpp  Wow64Subsystem.h  x86Subsystem.cpp  x86Subsystem.h
src/BlackBone/Symbols/: PDBHelper.cpp  PDBHelper.h  PatternLoader.cpp  PatternLoader.h  SymbolData.cpp  SymbolData.h  SymbolLoader.cpp  SymbolLoader.h
src/BlackBone/Syscalls/: Syscall.h  Syscall32.asm  Syscall64.asm
src/BlackBoneDrv/: BlackBoneDef.h  BlackBoneDrv.c  BlackBoneDrv.h  BlackBoneDrv.sln  BlackBoneDrv.vcxproj  BlackBoneDrv.vcxproj.filters  Dispatch.c  Imports.h  Inject.c  Loader.c  Loader.h  MMap.c  NativeEnums.h  NativeStructs.h  NativeStructs10.h  NativeStructs7.h  NativeStructs8.h  NativeStructs81.h  NotifyRoutine.c  PEStructs.h  Private.c  Private.h  Remap.c  Remap.h  Routines.c  Routines.h  Utils.c  Utils.h  VadHelpers.c  VadHelpers.h  VadRoutines.c  VadRoutines.h  apiset.h  ldrreloc.c
src/BlackBoneTest/: BlackBoneTest.vcxproj  BlackBoneTest.vcxproj.filters  Common.h  TestAsmJit.cpp  TestAsmVariant.cpp  TestBasic.cpp  TestDriver.cpp  TestGuard.cpp  TestLocalHook.cpp  TestManualMap.cpp  TestModules.cpp  TestMultiPtr.cpp  TestPatternScan.cpp  TestPebTeb.cpp  TestRemoteCall.cpp  TestRemoteHook.cpp  TestRemoteMemory.cpp  TestScopeExit.cpp  TestSymbols.cpp  TestSyscall.cpp
src/PythonicBlackBone/: BlackBone.py
src/PythonicBlackBone/test/: ReadWriteProcMem.py
src/Samples/: CMakeLists.txt  Main.cpp  ManualMap.cpp  Samples.vcxproj  Samples.vcxproj.filters
src/TestApp/: AsmTest.cpp  CMakeLists.txt  DriverTest.cpp  LocalHookTest.cpp  MMapTest.cpp  Main.cpp  MultiPtrTest.cpp  PatternTest.cpp  RemoteCallTest.cpp  RemoteHookTest.cpp  RemoteMemTest.cpp  SyscallTest.cpp  TestApp.cpp  TestApp.vcxproj  TestApp.vcxproj.filters  Tests.h
(+1159 files in other folders)
